tests/safety/reject/string_index_oob.keel
def main(sys: System); Io:
    s = "hi"
    println(s[99])
